Downgraded to Java 8 (for Android compatibility) and made this a multi-release jar (for JPMS support)